# YAPPPWN

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  padi.pcap  padi_2.pcap  padi_ps4.pcap  pado_to_ps4.pcap  run_simul.sh
.github/workflows/: deploy.yml  main.yml  release.yml  releases.yml  rust.yml
src/: constants.rs  exploit.rs  macaddress.rs  main.rs  parser.rs  py_yapppwn.rs  test.py
src/exploit/: exploit.rs  exploit_state.rs  lcp_echo_handler.rs  mod.rs  negotiations.rs  network_structs.rs  offsets.rs  packet.rs  packet_checking.rs  packet_creation.rs  utils.rs
test_data/: Successfull_PPPwn.pcap  Successfull_PPPwn_from_ps4.pcap  Successfull_yappwn_from_host.pcap  first_udp.pcap  icmpv6_adv.pcap  icmpv6_echo_reply.pcap  icmpv6_echo_req.pcap  icmpv6_nd_ns.pcap  icmpv6_router_sol.pcap  initial_two_padi.pcap  ipcp_conf_ack.pcap  ipcp_conf_nak.pcap  ipcp_conf_req.pcap  ipcp_conf_request.pcap  ipcp_negotiation_from_ps4.pcap  lcp_conf_ack.pcap  lcp_conf_ack_to_ps4.pcap  lcp_conf_reject.pcap  lcp_conf_req.pcap  lcp_conf_request.pcap  lcp_conf_request_m.pcap  lcp_echo_request.pcap  lcp_negotiation_from_ps4.pcap  lcp_term_request.pcap  malicious_lcp.pcap  malicious_lcp_reject.pcap  pado_no_ac.pcap  pado_to_ps4.pcap  padr_packet.pcap  pads_to_ps4.pcap  padt_packet.pcap  ppp_negotiation_from_host.pcap  ppp_negotiation_from_ps4.pcap  successfull_pppwn.txt
